[package]
name = "lisenslogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = {version = "0.11.14", features = ["blocking"]}
scraper = "0.14.0"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
